# gb-rp2040

./: Cargo.toml
.cargo/: config.toml
src/: array_scaler.rs  clocks.rs  const_math.rs  dma_transfer.rs  i2s.rs  i2s2.rs  main.rs  pio_interface.rs  rp_hal.rs  scaler.rs  scaler_u8.rs  screen_handler.rs  stream_display.rs  stream_display_gen.rs  util.rs
src/display/: dma_streamer.rs  mod.rs  parallel_8bit.rs  parallel_8bit_interface.rs  spi_pio.rs  spi_pio_16.rs  spi_pio_16_dma.rs
src/gameboy/: audio.rs  display.rs  mod.rs  rom.rs
src/hardware/: sound.rs
src/hardware/display/: mod.rs  scaler.rs
src/spi_device/: exclusive.rs  mod.rs
